# lotto_server

./: .gitignore  README.md  main.py  pyproject.toml
crawler/: crawler.py
crawlers/: crawler.py
database/: config.py  db.py
models/: lotto.py
service/: lottoService.py
